Cleaning up a bunch of small findbugs warnings.